commit 6, Implemented post endpoint and fixed generated sequence value in mybatis config.xml.
